# ChatbotExperiment

./: .env.example  .gitignore  README.md  pytest.ini  rag_evaluation_results.json  rag_evaluation_results_summary.csv
app/: DatabaseManager.py  agent.py  config.py  create_db.py  evaluate_answer.py  main.py  pyproject.toml  pytest.ini  streaming_test.py
app/agents/: BaseAgent.py  Judge.py  LLMs.py  agent.py  system_prompts.py
app/api/: __init__.py
app/api/chat/: assistant.py  chatV1.py  history.py
app/api/history/: history.py
app/api/tools/: search.py  tools.py
app/components/: DatabaseManager.py  HandbookTextChunker.py  TextChunker.py  agent.py  rag_service.py  system_prompts.py
app/core/: DatabaseManager.py  config.py
app/evaluation/: rag_evaluator.py
app/models/: SQL_models.py  chat.py  models.py
app/scripts/: create_db.py  evaluate_answer.py
app/tests/: example_requests.py  golden_test.py  test_api.py
frontend/: main.py  pyproject.toml
journals/: data_pipeline.ipynb  rag_evaluation_results.json  rag_evaluation_results_summary.csv  rag_testing.ipynb  results.ipynb  streaming_tests.ipynb
src/: data_pipeline.ipynb
tests/: test_main.py
