[project]
name = "chatbotexperiment"
version = "0.1.0"
dependencies = [
    "pandas>=2.2.3",
    "pydantic_ai>=0.0.41",
    "pydantic>=2.10.6",
    "typing_extensions>=4.12.2",
    "lancedb>=0.20.0",
    "fastapi>=0.115.11",
    "uvicorn>=0.34.0",
    "pydantic-settings>=2.8.1",
    "google-generativeai>=0.8.4",
    "openai>=1.65.3",
    "anthropic>=0.49.0",
    "langfuse>=2.59.7",
    "cohere>=5.14.0",
    "pgvector>=0.3.6",
    "httpx>=0.28.1",
    "SQLAlchemy>=2.0.39",
    "pytest>=8.3.5",
    
]

[tool.uv]
# uv specific settings can be placed here.

